style.css
/* Basic Style */
body {
  background-color: #f8f8f8;
  color: #333;
  font-family: Lato, sans-serif;
}
.top-panel {
  width: 500px;
  margin: 0 auto;
  display: block;
  text-align: right;
}
.top-panel-img {
  width: 100%;
}
.top-panel .more_inf {
  font-family: fantasy, cursive;
}

@media (max-width: 768px) {
  .top-panel {
    text-align: center;
  }
}
.main-element {
  display: block;
  width: 500px;
  margin: 0 auto 0;
}
.task {
  width: 56%;
  display: inline-block;
  flex-grow: 1;
}
.task-row-wrapper {
  display: flex;
}
ul {
  margin: 0;
  padding: 0px;
}
li,
h3 {
  list-style: none;
}
input,
button {
  outline: none;
}
.button {
  background: none;
  border: 0px;
  color: #888;
  font-size: 15px;
  width: 60px;
  font-family: Lato, sans-serif;
  cursor: pointer;
}
.button:hover {
  color: #3a3a3a;
}
/* Heading */
.text-h3,
.label-new-task {
  color: #333;
  font-weight: 700;
  font-size: 15px;
  border-bottom: 2px solid #333;
  padding: 30px 0 10px;
  margin: 0;
  text-transform: uppercase;
}
.input-text {
  margin: 0;
  font-size: 18px;
  line-height: 18px;
  height: 21px;
  padding: 0 9px;
  border: 1px solid #ddd;
  background: #fff;
  border-radius: 6px;
  font-family: Lato, sans-serif;
  color: #888;
}
.input-text:focus {
  color: #333;
}

/* New Task */
.label-new-task {
  display: block;
  margin: 0 0 20px;
}
.all-inputs #new-task {
  width: 318px;
}

/* Task list */
.li-element {
  overflow: hidden;
  padding: 20px 0;
  border-bottom: 1px solid #eee;

  display: flex;
  justify-content: space-between;
  align-items: center;
}
.li-element > * {
  vertical-align: middle;
}

.input-checkbox {
  margin: 0 10px;
}
.name-todo {
  padding-left: 10px;
  box-sizing: border-box;
  font-size: 18px;
  width: 226px;
}
.input-text {
  width: 226px;
}
.img-remome {
  height: 2em;
  transform: rotateZ(45deg);
  transition: transform 200ms ease-in;
}
.img-remome:hover {
  transform: rotateZ(0);
}

/* Completed */
.name-todo {
  text-decoration: line-through;
  color: #888;
}

/* Edit Task */
.input-to-do {
  display: none;
}

.input-edit {
  display: inline-block;
  width: 224px;
}

.label-edit {
  display: none;
}

